--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "use-blurred-bottom-scroll",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
