--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "use-blurred-bottom-scroll",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
-  "main": "src/index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
