--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/useBlurredBottomScroll.js",
   "types": "dist/useBlurredBottomScroll.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint": "tslint -p tsconfig.json",
@@ -15,7 +15,9 @@
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/isolonenko/use-blurred-bottom-scroll.git"
@@ -33,11 +35,17 @@
   },
   "homepage": "https://github.com/isolonenko/use-blurred-bottom-scroll#readme",
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.3",
     "@types/react": "^18.0.25",
+    "jest": "^29.3.1",
     "prettier": "^2.8.0",
+    "react-hooks-testing-library": "^0.6.0",
+    "ts-jest": "^29.0.3",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.3"
