--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/isolonenko/use-blurred-bottom-scroll#readme",
   "dependencies": {
+    "@types/react-test-renderer": "^18.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.1"
